--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "E-Commerce",
+  "name": "fitMate",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -23,7 +23,9 @@
     "@swimlane/ngx-charts": "^20.3.1",
     "bootstrap": "^5.2.3",
     "ng2-ckeditor": "^1.3.7",
+    "ngx-dropzone": "^3.1.0",
     "ngx-gravatar": "^13.0.0",
+    "ngx-image-cropper": "^7.2.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
